# hypergraph-ddi

./: .gitignore  CITATION.cff  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: demo_mlp.yaml  demo_synthetic.yaml  drugbank_hgnn.yaml  twosides_gcn.yaml
scripts/: evaluate.py  preprocess.py  run_experiment.py  train.py  verify_imports.py
src/: __init__.py
src/baselines/: __init__.py  factory.py
src/datasets/: __init__.py  ddi_dataset.py  graph_dataset.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/experiments/: __init__.py  runner.py
src/inference/: __init__.py  predict.py
src/models/: __init__.py  base.py  gat.py  gcn.py  graphsage.py  hgnn.py  mlp_baseline.py
src/preprocessing/: __init__.py  hypergraph.py  loaders.py  negative_sampling.py  normalization.py  pipeline.py  splits.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  paths.py  seed.py
tests/: test_smoke.py
