[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraph-ddi"
version = "0.1.0"
description = "Hypergraph Neural Networks for Higher-Order Drug Interaction Modeling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "torch>=2.1.0,<3.0.0",
    "torch-geometric>=2.4.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
